# atlassian

./: .gitignore  AGENTS.md  Makefile  README.md
go/: go.mod
python/: pyproject.toml  requirements.txt
python/atlassian/: __init__.py  canonical_models.py  logging.py
python/atlassian/graph/: __init__.py  client.py  schema_fetcher.py  throttle.py
python/atlassian/rest/: __init__.py  client.py  env.py  openapi_fetcher.py
python/atlassian_graphql/: __init__.py  auth.py  client.py  errors.py  logging.py  models.py  retry.py  throttle.py
python/tests/integration/: test_live_jira_issues_rest.py  test_live_jira_projects.py  test_live_jira_projects_rest.py  test_live_smoke.py
python/tests/unit/: test_auth.py  test_beta_headers.py  test_client_basic.py  test_compass_components.py  test_jira_issue_graphql.py  test_jira_projects_mapper.py  test_jira_projects_pagination.py  test_jira_rest_changelog.py  test_jira_rest_issues.py  test_jira_rest_openapi_fetcher.py  test_jira_rest_projects.py  test_jira_rest_sprints.py  test_jira_rest_worklogs.py  test_jira_sprint_graphql.py  test_jira_sprints_mapper.py  test_jira_worklogs_graphql.py  test_oauth_3lo.py  test_rate_limit_429.py  (+2 more)
python/tools/: fetch_graphql_schema.py  fetch_jira_rest_openapi.py  generate_compass_component_models.py  generate_compass_scorecard_models.py  generate_jira_issue_models.py  generate_jira_project_models.py  generate_jira_rest_models.py  generate_jira_sprint_models.py  generate_jira_worklog_models.py  generate_team_models.py  generate_teamwork_graph_models.py  oauth_login.py  oauth_login_server.py
(+98 files in other folders)
